{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 11,
  "lineage": "fcd2cd83-8f40-834d-84f3-b72466fcbaba",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "awesome_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.1.0.50",
            "association_id": "eipassoc-096351f12461a37a7",
            "domain": "vpc",
            "id": "eipalloc-0dedbce793ace114d",
            "network_interface": "eni-0da16608a649355c5",
            "private_dns": "ip-10-1-0-50.ec2.internal",
            "private_ip": "10.1.0.50",
            "public_dns": "ec2-54-175-178-200.compute-1.amazonaws.com",
            "public_ip": "54.175.178.200",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.network.aws_internet_gateway.awesome_igw",
            "module.network.aws_network_interface.awesome_network_interface",
            "module.network.aws_security_group.awesome_sg_web_traffic",
            "module.network.aws_subnet.awesome_subnet",
            "module.network.aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "module": "module.server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "awesome_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0758470213bdd23b1",
            "arn": "arn:aws:ec2:us-east-1:535518648590:instance/i-0277ec839b48af646",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0277ec839b48af646",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "mops",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0da16608a649355c5"
              }
            ],
            "primary_network_interface_id": "eni-0da16608a649355c5",
            "private_dns": "ip-10-1-0-50.ec2.internal",
            "private_ip": "10.1.0.50",
            "public_ip": "54.175.178.200",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03113528cba01bf48",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dd6971839d5f03d7",
            "tags": {
              "Name": "prod_web_server",
              "created_by": "John",
              "environment": "prod"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e046cf31625b83f1"
            ]
          },
          "dependencies": [
            "module.network.aws_eip.awesome_eip",
            "module.network.aws_internet_gateway.awesome_igw",
            "module.network.aws_network_interface.awesome_network_interface",
            "module.network.aws_route_table.awesome_route_table",
            "module.network.aws_route_table_association.awesome_rt_accociate",
            "module.network.aws_security_group.awesome_sg_web_traffic",
            "module.network.aws_subnet.awesome_subnet",
            "module.network.aws_vpc.prod",
            "module.server.data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "awesome_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535518648590:internet-gateway/igw-03d36528efaef58d1",
            "id": "igw-03d36528efaef58d1",
            "owner_id": "535518648590",
            "vpc_id": "vpc-01daac472568c9a09"
          },
          "dependencies": [
            "module.network.aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "awesome_network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0da16608a649355c5",
            "mac_address": "12:b4:ea:66:e1:35",
            "private_ip": "10.1.0.50",
            "private_ips": [
              "10.1.0.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0e046cf31625b83f1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dd6971839d5f03d7"
          },
          "dependencies": [
            "module.network.aws_security_group.awesome_sg_web_traffic",
            "module.network.aws_subnet.awesome_subnet",
            "module.network.aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "awesome_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-037a781fd583dcdfd",
            "owner_id": "535518648590",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03d36528efaef58d1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Prod"
            },
            "vpc_id": "vpc-01daac472568c9a09"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.awesome_igw",
            "module.network.aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "awesome_rt_accociate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1c822442e51afe0",
            "route_table_id": "rtb-037a781fd583dcdfd",
            "subnet_id": "subnet-0dd6971839d5f03d7"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.awesome_igw",
            "module.network.aws_route_table.awesome_route_table",
            "module.network.aws_subnet.awesome_subnet",
            "module.network.aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "awesome_sg_web_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535518648590:security-group/sg-0e046cf31625b83f1",
            "description": "Allow Web traffic on port 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e046cf31625b83f1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "prod-allow_web_traffic",
            "name_prefix": "",
            "owner_id": "535518648590",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-01daac472568c9a09"
          },
          "dependencies": [
            "module.network.aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "awesome_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535518648590:subnet/subnet-0dd6971839d5f03d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.0.0/16",
            "id": "subnet-0dd6971839d5f03d7",
            "map_public_ip_on_launch": false,
            "owner_id": "535518648590",
            "tags": {
              "created_by": "John",
              "environment": "prod"
            },
            "vpc_id": "vpc-01daac472568c9a09"
          },
          "dependencies": [
            "module.network.aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535518648590:vpc/vpc-01daac472568c9a09",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0143b4341cc91d286",
            "default_route_table_id": "rtb-01889af7d48296e8b",
            "default_security_group_id": "sg-02e2f8de06936f2c2",
            "dhcp_options_id": "dopt-bbec06de",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01daac472568c9a09",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01889af7d48296e8b",
            "owner_id": "535518648590",
            "tags": {
              "Name": "Prod-prod"
            }
          }
        }
      ]
    }
  ]
}